--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,16 @@
 h1 {
   text-align: center;
-}
+};
 
 img {
   width: 25%;
   height: 25%;
-}
+};
 
 #puffins, #quetzals, #sloths {
   display: none;
-}
+};
+
+.btn {
+  background-color: blue;
+};
